--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,24 +1,31 @@
+<nav class=" navbar navbar-default" role=" navigation">
+    <div class=" container">
 
-<nav class =" navbar navbar-default" role =" navigation" >
-<div class =" container">
+        <div class=" navbar-header">
+            <button type=" button" class=" navbar-toggle collapsed" data- 6 toggle=" collapse"
+                    data-target="# bs-example-navbar-collapse-1">
+                <span class="sr-only"> Toggle navigation </span>
+                <span class="icon-bar"> </span>
+                <span class="icon-bar"> </span>
+                <span class="icon-bar"> </span>
+            </button>
+            <a class="navbar-brand" href="#"> Brand </a>
+        </div>
+        <div class=" collapse navbar-collapse" id=" bs-example-navbar-collapse-1">
+            <ul class=" nav navbar-nav navbar-right">
+                <li> <%= link_to 'Home', root_path %></li>
+                <li> <%= link_to 'About Me', home_about_path %></li>
+                <% if user_signed_in? %>
+                    <li> <%= link_to 'Edit profile', edit_user_registration_path %></li>
+                    <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+                <% else %>
+                    <li> <%= link_to 'login', new_user_session_path %> </li>
+                    <li> <%= link_to 'join', new_user_registration_path %> </li>
+                <% end %>
+            </ul>
+        </div>
+    </div>
 
-<div class =" navbar-header" >
-<button type =" button" class =" navbar-toggle collapsed" data- 6 toggle =" collapse" data-target ="# bs-example-navbar-collapse-1">
-<span class ="sr-only" > Toggle navigation </span>
-<span class ="icon-bar" > </span >
-<span class ="icon-bar" > </span >
-<span class ="icon-bar" > </span >
-</button>
-<a class ="navbar-brand" href ="#" > Brand </a>
-</div>
-<div class =" collapse navbar-collapse" id =" bs-example-navbar-collapse-1">
-<ul class =" nav navbar-nav navbar-right">
-<li> <%= link_to 'Home', root_path %> </li >
-<li> <%= link_to 'About Me', home_about_path %> </li >
-</ul>
-</div>
-</div>
-
- </nav>
+</nav>
 
 
