--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,12 @@
 <h1>Home#index</h1>
 
 <div class="jumbotron">
-    <h1>Welcome to my app</h1>
-    <p> It is gonna kick asses </p>
+    <h1>Welcome to my ROR app!</h1>
+    <p> This app is simply a mini version of pinterest. Users can add, edit, and delete
+        pins on their profiles. Main purpose of this project is to learn about ROR framework. This
+    project is a part of this fantastic introductory <a href="https://www.amazon.com/Learn-Ruby-Rails-Web-Development-ebook/dp/B00SGN0VP2/ref=sr_1_2?s=books&ie=UTF8&qid=1470803772&sr=1-2&keywords=ruby+on+rails">
+            book.
+        </a></p>
     <%= link_to 'About', home_about_path, class: 'btn btn-default' %>
     <%= link_to 'Home', root_path, class: 'btn btn-primary'%>
 </div>
-
-<p>Find me in app/views/home/index.html.erb</p>
