--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -16,11 +16,15 @@
                 <li> <%= link_to 'Home', root_path %></li>
                 <li> <%= link_to 'About Me', home_about_path %></li>
                 <% if user_signed_in? %>
-                    <li> <%= link_to 'Edit profile', edit_user_registration_path %></li>
+                <li> <%= link_to 'pins', pins_path %> </li>
+                <li> <%= link_to 'Edit profile', edit_user_registration_path %></li>
                     <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+
                 <% else %>
                     <li> <%= link_to 'login', new_user_session_path %> </li>
                     <li> <%= link_to 'join', new_user_registration_path %> </li>
+
+
                 <% end %>
             </ul>
         </div>
