--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -11,11 +11,13 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <% if pin.user == current_user%>
         <td><%= pin.description %></td>
         <td><%= link_to 'Show', pin %></td>
         <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
         <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+        <% end %>
     <% end %>
   </tbody>
 </table>
