--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_for(@pin) do |f| %>
+<%= form_for @pin, html: {multipart: true} do |f| %>
   <% if @pin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
-
       <ul>
       <% @pin.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -21,7 +20,12 @@
     <%= f.label :description %><br>
     <%= f.text_field :description, class:"form-control" %>
   </div>
-  <div class="actions">
+  <div class="form-group">
+    <%= f.label :image %><br>
+    <%= f.file_field :image, class:"form-control" %>
+  </div>
+
+    <div class="actions">
     <%= f.submit class:"btn btn-primary" %>
   </div>
 
@@ -29,4 +33,4 @@
 
       </div>
   </div>
-    <% end %>
+<% end %>
